[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Overlap/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invincible_ended" from="." to="." method="_on_Hurtbox_invincible_ended"]
[connection signal="invincible_started" from="." to="." method="_on_Hurtbox_invincible_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
